cmake_minimum_required(VERSION 3.10)
#set(CMAKE_CXX_COMPILER "D:/mingw_posix/mingw64/bin/g++.exe")
#set(CMAKE_C_COMPILER "D:/mingw_posix/mingw64/bin/gcc.exe")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address -fsanitize=leak -static-libasan")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fsanitize=leak -static-libasan")
project(cmake_test VERSION 1.0.0 LANGUAGES C CXX)
file(GLOB SRC_DIR_LIST  "*.c" "*.cpp")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -Wall -g  -fsanitize=address -fno-omit-frame-pointer -Wextra -std=c++17  -Wno-unused-parameter -pthread")
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
add_executable(Parse ${SRC_DIR_LIST})